--- a/Vaishu 1.html
+++ b/Vaishu 1.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <title> my web site </title>
+    <title> my web page  </title>
   </head>
   <body>
-    <p> hello! i am vaishu.</p>
+    <p>hello! i am vaishu.</p>
   </body>
 </html>
